fixes cut off of past passes in left side bar, and load up leaflet error which brought the load up to a stop

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -371,7 +371,7 @@ input[type="checkbox"]:disabled+label::before {
 #leftBottom{
   overflow-y: auto;
   overflow-x: hidden;
-  height: 95%;
+  height: calc(100vh - 125px);
   scrollbar-width: thin;
 }
 
